<package format="2">
    <name>pca9685</name>
    <version>0.0.0</version>
    <description>
        A package which supplies a device-agnostic driver for the PCA9685 PWM
        integrated circuit over I2C.
    </description>
    <maintainer email="ssnover95@gmail.com">Shane Snover</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>hardware-intf</depend>
</package>